Added google analytics

--- a/_data/expediciones.yml
+++ b/_data/expediciones.yml
@@ -75,8 +75,8 @@
 - fecha: 2008
   lugar: Brazil
   logros: 
-  - Escalada en roca
-  - Sierra Tres Picos<br>
+  - Escalada en roca<br>
+  - Sierra Tres Picos
   integrantes: 
   - Dimitar Ralev<br> 
   - Jean Carlo Rivera
