--- a/_data/miembros.yml
+++ b/_data/miembros.yml
@@ -18,9 +18,9 @@
   picture: /assets/img/miembros/profile-francisco.jpg
   carrera: Cohorte '11 USB
 
-# - name: Rosalinda Rocca
-#   picture: /assets/img/miembros/profile-rosalinda.jpg
-#   carrera: UCV
+- name: Rosalinda Rocca
+  picture: /assets/img/miembros/profile-rosalinda.jpg
+  carrera: UCV
 
 - name: Carlos Sivira
   picture: /assets/img/miembros/profile-carlos.jpg
