--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: oikos@usb.ve
 description: >- # this means to ignore newlines until "baseurl:"
   Página Web del Grupo Excursionista Oikos de la Universidad Simón Bolívar
 baseurl: ""
-url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://geoikos.github.io/geoikos" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: oikosUSB
 instagram_username:  oikosUSB
 
