New Member Photo

--- a/_data/miembros.yml
+++ b/_data/miembros.yml
@@ -49,3 +49,7 @@
 - name: Nicolas Jaua
   picture: /assets/img/miembros/profile-nico.jpg
   carrera: Cohorte '15 USB
+
+- name: Paola Proietti
+  picture: /assets/img/miembros/profile-pao.jpg
+  carrera: UCAB
