--- a/_data/expediciones.yml
+++ b/_data/expediciones.yml
@@ -1,3 +1,22 @@
+
+- fecha: 2018
+  lugar: Bolivia
+  logros: 
+  - Tarija<br>
+  - Huayna Potosí<br>
+  - Pomerape<br>
+  - Parinacota<br>
+  - Sajama
+  integrantes:
+  - Luis Eman<br>
+  - Jorge Olivares<br>
+  - Daniel Machado<br>
+  - Michael Sánchez<br>
+  - Francisco Marcos<br>
+  - Katheryn Palacios<br>
+  - Verónica Machado<br>
+  - Esteban Camargo
+
 - fecha: 2014
   lugar: Argentina
   logros: Lomas Amarillas
