--- a/_data/miembros.yml
+++ b/_data/miembros.yml
@@ -53,3 +53,7 @@
 - name: Paola Proietti
   picture: /assets/img/miembros/profile-pao.jpg
   carrera: UCAB
+
+- name: Andres Chacon
+  picture: /assets/img/miembros/profile-andres.jpg
+  carrera: Cohorte '14 USB
