--- a/_data/miembros.yml
+++ b/_data/miembros.yml
@@ -18,9 +18,9 @@
   picture: /assets/img/miembros/profile-francisco.jpg
   carrera: Cohorte '11 USB
 
-- name: Rosalinda Rocca
-  picture: /assets/img/miembros/profile-rosalinda.jpg
-  carrera: UCV
+#- name: Rosalinda Rocca
+#  picture: /assets/img/miembros/profile-rosalinda.jpg
+#  carrera: UCV
 
 - name: Carlos Sivira
   picture: /assets/img/miembros/profile-carlos.jpg
@@ -30,25 +30,26 @@
   picture: /assets/img/miembros/profile-michael.jpg
   carrera: Cohorte '09 USB
 
-- name: Orlando Perez
-  picture: /assets/img/miembros/profile-orlando.jpg
-  carrera: Cohorte '12 USB
+#- name: Orlando Perez
+#  picture: /assets/img/miembros/profile-orlando.jpg
+#  carrera: Cohorte '12 USB
 
-- name: Daniel Machado
-  picture: /assets/img/miembros/profile-machado.jpg
-  carrera: Cohorte '15 USB
+#- name: Daniel Machado
+#  picture: /assets/img/miembros/profile-machado.jpg
+#  carrera: Cohorte '15 USB
 
 - name: Marcos Lerones
   picture: /assets/img/miembros/profile-lerones.jpg
   carrera: Cohorte '15 USB
+  instagram: https://www.instagram.com/marcosjlr/
 
 - name: Daniela Torres
   picture: /assets/img/miembros/profile-daniela.jpg
   carrera: UNIMET
 
-- name: Nicolas Jaua
-  picture: /assets/img/miembros/profile-nico.jpg
-  carrera: Cohorte '15 USB
+#- name: Nicolas Jaua
+#  picture: /assets/img/miembros/profile-nico.jpg
+#  carrera: Cohorte '15 USB
 
 - name: Paola Proietti
   picture: /assets/img/miembros/profile-pao.jpg
@@ -57,3 +58,21 @@
 - name: Andres Chacon
   picture: /assets/img/miembros/profile-andres.jpg
   carrera: Cohorte '14 USB
+
+- picture: /assets/img/miembros/profile-luiski.jpg
+  name: Luis Carlos Marval
+  carrera: Cohorte '12 USB
+  instagram: https://www.instagram.com/lcmarval/
+  twitter: https://twitter.com/luiscamarval
+
+- picture: /assets/img/miembros/profile-kathy.jpg
+  name: Katheryn Palacios
+  carrera: Cohorte '13 USB
+  instagram: https://www.instagram.com/kathyppgc/
+  twitter: https://twitter.com/katheppgc
+
+- picture: /assets/img/miembros/profile-nina.jpg
+  name: Valentina González
+  carrera: Cohorte '13 USB
+  instagram: https://www.instagram.com/niina_hood/
+  twitter: https://www.instagram.com/niina_hood/
