--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: GEOikosUSB
 email: oikos@usb.ve
 description: # this means to ignore newlines until "baseurl:"
   Página Web del Grupo Excursionista Oikos de la Universidad Simón Bolívar
-url: "www.geoikos.com.ve" #"http://localhost:8080" # the base hostname & protocol for your site, e.g. http://example.com
+url: "www.geoikos.com.ve" #"http://localhost:8080"  the base hostname & protocol for your site, e.g. http://example.com
 baseurl: ""
 twitter_username: oikosUSB
 instagram_username:  oikosUSB
