Foto Nico y redes sociales

--- a/_data/junta.yml
+++ b/_data/junta.yml
@@ -11,6 +11,7 @@
 - picture: /assets/img/junta/profile-tesorero.jpg
   nombre: Nicolas Jaua
   cargo: Tesorero
+  instagram: https://www.instagram.com/nicojaua/
 
 - picture: /assets/img/junta/profile-dt.jpg
   nombre: Orlando Perez
