Added New Photos

--- a/_data/junta.yml
+++ b/_data/junta.yml
@@ -1,10 +1,10 @@
-- picture: /assets/img/junta/profile-presidente.jpg
+- picture: /assets/img/junta/profile-presidente.png
   nombre: Esteban Camargo
   cargo: Presidente
   instagram: https://www.instagram.com/estebmaister/
   twitter: https://twitter.com/Estebmaister
 
-- picture: /assets/img/junta/profile-secretario.jpg
+- picture: /assets/img/junta/profile-secretario.png
   nombre: Daniel Machado
   cargo: Secretario
 
