Actualizacion de junta y miembros

--- a/_data/honorarios.yml
+++ b/_data/honorarios.yml
@@ -25,3 +25,8 @@
 - name: Bernardo Féfix
   picture: /assets/img/honorarios/profile-h-bernardo.jpg
   carrera: Cohorte '98 USB
+
+- name: Jorge Olivares
+  picture: /assets/img/honorarios/profile-h-jorgeo.jpg
+  carrera: Cohorte '10 USB
+  instagram: https://www.instagram.com/jorgeolivaresp/
