--- a/_data/miembros.yml
+++ b/_data/miembros.yml
@@ -2,18 +2,13 @@
 #   picture: /assets/img/miembros/profile-eliazar.jpg
 #   carrera: Cohorte '12 USB
 
-- name: Verónica Machado
-  picture: /assets/img/miembros/profile-veronica.jpg
-  carrera: UCAB
+#- name: Verónica Machado
+#  picture: /assets/img/miembros/profile-veronica.jpg
+#  carrera: UCAB
 
-- name: Jorge Olivares
-  picture: /assets/img/miembros/profile-jorgeo.jpg
-  carrera: Cohorte '10 USB
-  instagram: https://www.instagram.com/jorgeolivaresp/
-
-- name: Susana Andrade
-  picture: /assets/img/miembros/profile-susana.jpg
-  carrera: UCV
+#- name: Susana Andrade
+#  picture: /assets/img/miembros/profile-susana.jpg
+#  carrera: UCV
 
 - name: Francisco Marcos
   picture: /assets/img/miembros/profile-francisco.jpg
@@ -33,34 +28,34 @@
   picture: /assets/img/miembros/profile-michael.jpg
   carrera: Cohorte '09 USB
 
-#- name: Orlando Perez
-#  picture: /assets/img/miembros/profile-orlando.jpg
-#  carrera: Cohorte '12 USB
+- name: Orlando Perez
+  picture: /assets/img/miembros/profile-orlando.jpg
+  carrera: Cohorte '12 USB
 
 #- name: Daniel Machado
 #  picture: /assets/img/miembros/profile-machado.jpg
 #  carrera: Cohorte '15 USB
 
-- name: Marcos Lerones
-  picture: /assets/img/miembros/profile-lerones.jpg
-  carrera: Cohorte '15 USB
-  instagram: https://www.instagram.com/marcosjlr/
+#- name: Marcos Lerones
+#  picture: /assets/img/miembros/profile-lerones.jpg
+#  carrera: Cohorte '15 USB
+#  instagram: https://www.instagram.com/marcosjlr/
 
 - name: Daniela Torres
   picture: /assets/img/miembros/profile-daniela.jpg
   carrera: UNIMET
 
-#- name: Nicolas Jaua
-#  picture: /assets/img/miembros/profile-nico.jpg
-#  carrera: Cohorte '15 USB
+- name: Nicolas Jaua
+  picture: /assets/img/miembros/profile-nico.jpg
+  carrera: Cohorte '15 USB
 
 - name: Paola Proietti
   picture: /assets/img/miembros/profile-pao.jpg
   carrera: UCAB
 
-- name: Andres Chacon
-  picture: /assets/img/miembros/profile-andres.jpg
-  carrera: Cohorte '14 USB
+#- name: Andres Chacon
+#  picture: /assets/img/miembros/profile-andres.jpg
+#  carrera: Cohorte '14 USB
 
 - name: Luis Carlos Marval
   picture: /assets/img/miembros/profile-luiski.jpg
@@ -68,14 +63,25 @@
   instagram: https://www.instagram.com/lcmarval/
   twitter: https://twitter.com/luiscamarval
 
-- name: Katheryn Palacios
-  picture: /assets/img/miembros/profile-kathy.jpg
-  carrera: Cohorte '13 USB
-  instagram: https://www.instagram.com/kathyppgc/
-  twitter: https://twitter.com/katheppgc
+#- name: Katheryn Palacios
+#  picture: /assets/img/miembros/profile-kathy.jpg
+#  carrera: Cohorte '13 USB
+#  instagram: https://www.instagram.com/kathyppgc/
+#  twitter: https://twitter.com/katheppgc
 
 - picture: /assets/img/miembros/profile-nina.jpg
   name: Valentina González
   carrera: Cohorte '13 USB
   instagram: https://www.instagram.com/niina_hood/
   twitter: https://www.instagram.com/niina_hood/
+
+- picture: /assets/img/miembros/profile-esteban.jpg
+  name: Esteban Camargo
+  carrera: Cohorte '11 USB
+  instagram: https://www.instagram.com/estebmaister/
+  twitter: https://twitter.com/Estebmaister
+
+- picture: /assets/img/miembros/profile-jeral.jpg
+  name:  Jeraldine Aparicio
+  carrera: Cohorte '14 USB
+  instagram: https://www.instagram.com/jeraldine12/
